update | lstm&crf&deepfm

--- a/CRF.ipynb
+++ b/CRF.ipynb
@@ -68,7 +68,7 @@
     "#        [-1.79175947, -0.22314355]])\n",
     "# #########################################\n",
     "probabilities = {\n",
-    "    'fair': np.array([1 / 6] * 6),  # 无偏骰子\n",
+    "    'fair': np.array([1 / 6] * 6),  # 无偏骰子，6个点数都是一样的概率\n",
     "    'loaded': np.array([0.04, 0.04, 0.04, 0.04, 0.04, 0.8]),  # 有偏骰子\n",
     "}\n",
     "log_likelihood = np.hstack([np.log(probabilities['fair']).reshape(-1, 1),\n",
@@ -195,10 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0,
-     28
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "run_control": {
