--- a/DeepFM_PackageMode.ipynb
+++ b/DeepFM_PackageMode.ipynb
@@ -5,14 +5,26 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-28T10:40:25.421137Z",
-     "start_time": "2018-12-28T10:40:21.016535Z"
+     "end_time": "2020-04-22T04:00:08.096613Z",
+     "start_time": "2020-04-22T04:00:05.631092Z"
     },
     "deletable": false,
     "editable": false,
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow.contrib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b7288d36a74f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfunctools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msaved_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtag_constants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbatch_norm\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbatch_norm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteractiveshell\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mInteractiveShell\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mInteractiveShell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mast_node_interactivity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"all\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow.contrib'"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -266,8 +278,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-28T10:40:25.432213Z",
-     "start_time": "2018-12-28T10:40:25.422805Z"
+     "end_time": "2020-04-22T04:00:10.527062Z",
+     "start_time": "2020-04-22T04:00:10.505478Z"
     },
     "code_folding": [
      0
@@ -345,8 +357,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-28T10:40:25.481070Z",
-     "start_time": "2018-12-28T10:40:25.433517Z"
+     "end_time": "2020-04-22T04:00:10.847246Z",
+     "start_time": "2020-04-22T04:00:10.843382Z"
     },
     "deletable": false,
     "editable": false,
@@ -362,8 +374,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-28T10:40:25.521617Z",
-     "start_time": "2018-12-28T10:40:25.482595Z"
+     "end_time": "2020-04-22T04:00:12.530979Z",
+     "start_time": "2020-04-22T04:00:12.420323Z"
     },
     "code_folding": [
      2,
@@ -380,7 +392,7 @@
      "output_type": "stream",
      "text": [
       "预计batch总数: 2740.390625\n",
-      "模型相关信息保存路径:  /home/zhoutong/tf_modelInfo/type=midas/dt=2018-12-28-18-40-25\n",
+      "模型相关信息保存路径:  /home/zhoutong/tf_modelInfo/type=midas/dt=2020-04-22-12-00-10\n",
       "statistic --\n",
       "     train_pos = 1573\n",
       "     valid_neg = 193058\n",
@@ -556,8 +568,18 @@
       "     stat_ad_creative_id_s__view_15d = 550\n",
       "     stat_ad_creative_id_s__view_7d = 0.029411764705882353\n",
       "     stat_ad_app_s__ctr_7d = 1655147\n",
-      "     ad_info__budget_unit = 221\n",
-      "模型路径不存在，已创建新文件夹\n"
+      "     ad_info__budget_unit = 221\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/zhoutong/tf_modelInfo/type=midas/dt=2020-04-22-12-00-10'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-12004023b39b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_midas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase_save_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_midas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase_save_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"模型路径不存在，已创建新文件夹\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/zhoutong/tf_modelInfo/type=midas/dt=2020-04-22-12-00-10'"
      ]
     }
    ],
@@ -1280,7 +1302,6 @@
      "start_time": "2018-12-28T10:40:25.564243Z"
     },
     "code_folding": [
-     0,
      109,
      231,
      232,
@@ -2138,9 +2159,9 @@
    "id": "0a4b0220565be4badc3b4fdfcf5de99d"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3.6(tf2)",
    "language": "python",
-   "name": "python3"
+   "name": "tf2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2152,7 +2173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
@@ -2166,6 +2187,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
