--- a/TextCNN.ipynb
+++ b/TextCNN.ipynb
@@ -610,9 +610,7 @@
      "end_time": "2019-08-26T09:31:15.729419Z",
      "start_time": "2019-08-26T09:31:15.709725Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -648,6 +646,7 @@
     "            with tf.name_scope(\"conv-maxpool-%s\" % filterSize):\n",
     "                # 卷积层，卷积核尺寸为filterSize * embeddingSize，卷积核的个数为numFilters\n",
     "                # 初始化权重矩阵和偏置\n",
+    "                # 4-D (height,width,in_channels,out_channels) | out_channels是多少就用多少个 Height*Width 的卷积核\n",
     "                filterShape = [filterSize, config.weDim, 1, config.model.numFilters]\n",
     "                W = tf.Variable(tf.truncated_normal(filterShape, stddev=0.1), name=\"W\")\n",
     "                b = tf.Variable(tf.constant(0.1, shape=[config.model.numFilters]), name=\"b\")\n",
@@ -1249,7 +1248,6 @@
      "start_time": "2019-08-26T07:40:20.144384Z"
     },
     "code_folding": [
-     8,
      18,
      49,
      52,
@@ -1886,7 +1884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
