format|add some notes

--- a/BiLSTM_CRF.ipynb
+++ b/BiLSTM_CRF.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LSTMCRF"
+    "## BiLSTMCRF"
    ]
   },
   {
@@ -78,9 +78,7 @@
      "end_time": "2020-04-08T08:38:19.661450Z",
      "start_time": "2020-04-08T08:38:19.642934Z"
     },
-    "code_folding": [
-     1
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
