--- a/BiLSTM_CRF.ipynb
+++ b/BiLSTM_CRF.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-07T02:52:29.154730Z",
-     "start_time": "2020-04-07T02:52:29.143558Z"
+     "end_time": "2020-05-22T06:28:36.471044Z",
+     "start_time": "2020-05-22T06:28:36.165813Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-07T02:52:30.103416Z",
-     "start_time": "2020-04-07T02:52:30.100809Z"
+     "end_time": "2020-05-22T06:28:38.341016Z",
+     "start_time": "2020-05-22T06:28:36.517629Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-27T10:33:38.844898Z",
-     "start_time": "2020-03-27T10:33:38.840622Z"
+     "end_time": "2020-05-22T06:28:38.363095Z",
+     "start_time": "2020-05-22T06:28:38.360877Z"
     }
    },
    "outputs": [],
@@ -67,22 +67,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BiLSTMCRF"
+    "## BiLSTMCRF\n",
+    "参考： https://github.com/saiwaiyanyu/bi-lstm-crf-ner-tf2.0/blob/master/train.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-08T08:38:19.661450Z",
-     "start_time": "2020-04-08T08:38:19.642934Z"
+     "end_time": "2020-05-25T06:24:39.269540Z",
+     "start_time": "2020-05-25T06:24:39.261376Z"
     },
     "code_folding": []
    },
    "outputs": [],
    "source": [
-    "# 参考： https://github.com/saiwaiyanyu/bi-lstm-crf-ner-tf2.0/blob/master/train.py\n",
     "class LSTMCRF(tf.keras.Model):\n",
     "    def __init__(self, label_size, lstm_units, vocab_size, emb_dim):\n",
     "        super().__init__()\n",
@@ -121,55 +121,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BERTLayer"
+    "## BERTLayer\n",
+    "参考: https://towardsdatascience.com/simple-bert-using-tensorflow-2-0-132cb19e9b22"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T03:18:50.518956Z",
-     "start_time": "2020-04-02T03:18:50.514649Z"
+     "end_time": "2020-05-25T07:16:39.219928Z",
+     "start_time": "2020-05-25T07:16:39.193774Z"
     }
    },
    "outputs": [],
    "source": [
-    "import tensorflow_hub as hub"
+    "import tensorflow_hub as hub\n",
+    "import bert"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### init"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "code_folding": [
-     1,
-     3,
-     5,
-     7
-    ]
+    "ExecuteTime": {
+     "end_time": "2020-05-25T07:19:14.603738Z",
+     "start_time": "2020-05-25T07:19:14.546769Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 三个输入:\n",
+      ">>> input_word_ids: (None, 128)\n",
+      ">>> input_mask: (None, 128)\n",
+      ">>> segment_ids: (None, 128)\n",
+      "\n",
+      "\n",
+      ">>> tfhub的vocab_file: b'/tmp/tfhub_modules/3843fd6677cf2ea627707ca015d8fb1985c2e05f/assets/vocab.txt'\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_seq_length = 128  # Your choice here.\n",
+    "input_word_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_word_ids\")\n",
+    "input_mask = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_mask\")\n",
+    "segment_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32, name=\"segment_ids\")\n",
+    "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_zh_L-12_H-768_A-12/1\",trainable=True)\n",
+    "pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\n",
+    "model = tf.keras.Model(inputs=[input_word_ids, input_mask, segment_ids], outputs=[pooled_output, sequence_output])\n",
+    "print(\">>> 三个输入:\")\n",
+    "print(f\">>> input_word_ids: {input_word_ids.shape}\")\n",
+    "print(f\">>> input_mask: {input_mask.shape}\")\n",
+    "print(f\">>> segment_ids: {segment_ids.shape}\"+\"\\n\"*2)\n",
+    "\n",
+    "# tfhub里除了模型也带了配置文件，比如vocab_file\n",
+    "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
+    "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
+    "tokenizer = bert.bert_tokenization.FullTokenizer(vocab_file, do_lower_case)\n",
+    "print(f\">>> tfhub的vocab_file: {vocab_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T07:39:19.177037Z",
+     "start_time": "2020-05-25T07:39:19.164014Z"
+    }
    },
    "outputs": [],
    "source": [
-    "max_seq_length = 128  # Your choice here.\n",
-    "input_word_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
-    "                                       name=\"input_word_ids\")\n",
-    "input_mask = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
-    "                                   name=\"input_mask\")\n",
-    "segment_ids = tf.keras.layers.Input(shape=(max_seq_length,), dtype=tf.int32,\n",
-    "                                    name=\"segment_ids\")\n",
-    "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_zh_L-12_H-768_A-12/1\",\n",
-    "                            trainable=True)\n",
-    "pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])"
+    "def get_masks(tokens, max_seq_length):\n",
+    "    \"\"\"Mask for padding\"\"\"\n",
+    "    if len(tokens)>max_seq_length:\n",
+    "        raise IndexError(\"Token length more than max seq length!\")\n",
+    "    return np.array([1]*len(tokens) + [0] * (max_seq_length - len(tokens)))\n",
+    "\n",
+    "\n",
+    "def get_segments(tokens, max_seq_length):\n",
+    "    \"\"\"Segments: 0 for the first sequence, 1 for the second\"\"\"\n",
+    "    if len(tokens)>max_seq_length:\n",
+    "        raise IndexError(\"Token length more than max seq length!\")\n",
+    "    segments = []\n",
+    "    current_segment_id = 0\n",
+    "    for token in tokens:\n",
+    "        segments.append(current_segment_id)\n",
+    "        if token == \"[SEP]\":\n",
+    "            current_segment_id = 1\n",
+    "    return np.array(segments + [0] * (max_seq_length - len(tokens)))\n",
+    "\n",
+    "\n",
+    "def get_ids(tokens, tokenizer, max_seq_length):\n",
+    "    \"\"\"Token ids from Tokenizer vocab\"\"\"\n",
+    "    token_ids = tokenizer.convert_tokens_to_ids(tokens)\n",
+    "    input_ids = token_ids + [0] * (max_seq_length-len(token_ids))\n",
+    "    return np.array(input_ids)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T07:22:10.886261Z",
+     "start_time": "2020-05-25T07:22:10.877316Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[UNK]', 'i', 'come', 'from', 'america']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[100, 151, 11385, 8670, 11801]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens=tokenizer.tokenize(\"MASK i come from america\")\n",
+    "tokens\n",
+    "tokenizer.convert_tokens_to_ids(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-25T08:53:21.650213Z",
+     "start_time": "2020-05-25T08:53:21.379580Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "s = [\"This is a nice sentence.\",\"another sentence\"]\n",
+    "stokens = [ [\"[CLS]\"]+tokenizer.tokenize(i)+[\"[SEP]\"] for i in s]\n",
+    "\n",
+    "input_ids = np.array([get_ids(i, tokenizer, max_seq_length) for i in stokens])\n",
+    "input_masks = np.array([get_masks(i, max_seq_length) for i in stokens])\n",
+    "input_segments = np.array([get_segments(i, max_seq_length) for i in stokens])\n",
+    "\n",
+    "pool_embs, all_embs = model.predict([input_ids,input_masks,input_segments])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -236,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-14T12:15:20.588066Z",
-     "start_time": "2020-04-14T12:15:15.896114Z"
+     "end_time": "2020-05-25T09:30:47.749287Z",
+     "start_time": "2020-05-25T09:30:42.729399Z"
     }
    },
    "outputs": [],
@@ -281,11 +404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 96,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-14T12:12:36.610299Z",
-     "start_time": "2020-04-14T12:12:36.527083Z"
+     "end_time": "2020-05-25T09:30:53.328199Z",
+     "start_time": "2020-05-25T09:30:53.274176Z"
     }
    },
    "outputs": [],
@@ -360,11 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-14T12:19:56.673335Z",
-     "start_time": "2020-04-14T12:19:56.080251Z"
+     "end_time": "2020-05-25T09:31:00.403867Z",
+     "start_time": "2020-05-25T09:30:59.677491Z"
     },
     "scrolled": true
    },
@@ -374,17 +497,17 @@
      "output_type": "stream",
      "text": [
       "{'label_size': 9, 'lstm_units': 8, 'vocab_size': 6364, 'emb_dim': 300}\n",
-      "Model: \"lstmcrf_12\"\n",
+      "Model: \"lstmcrf\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_12 (Embedding)     multiple                  1909200   \n",
+      "embedding (Embedding)        multiple                  1909200   \n",
       "_________________________________________________________________\n",
-      "bidirectional_12 (Bidirectio multiple                  19776     \n",
+      "bidirectional (Bidirectional multiple                  19776     \n",
       "_________________________________________________________________\n",
-      "dense_12 (Dense)             multiple                  153       \n",
+      "dense (Dense)                multiple                  153       \n",
       "_________________________________________________________________\n",
-      "dropout_12 (Dropout)         multiple                  0         \n",
+      "dropout (Dropout)            multiple                  0         \n",
       "=================================================================\n",
       "Total params: 1,929,210\n",
       "Trainable params: 1,929,129\n",
