--- a/DeepFM_TF2.ipynb
+++ b/DeepFM_TF2.ipynb
@@ -4157,9 +4157,6 @@
      "start_time": "2020-05-19T12:32:55.989910Z"
     },
     "code_folding": [
-     1,
-     8,
-     28,
      47,
      67,
      91,
@@ -5060,11 +5057,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-15T01:49:33.762454Z",
-     "start_time": "2020-05-15T01:49:33.748004Z"
+     "end_time": "2020-09-10T09:39:14.376338Z",
+     "start_time": "2020-09-10T09:39:14.365854Z"
     }
    },
    "outputs": [
@@ -5091,7 +5088,7 @@
     "# 梯度下降方式求解平方根\n",
     "import math\n",
     "x=16\n",
-    "a=x//2\n",
+    "a=int(x/2)\n",
     "lr=0.01\n",
     "cnt=0\n",
     "\n",
@@ -5563,7 +5560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3.6(tf2)",
+   "display_name": "Python3.7(tf2)",
    "language": "python",
    "name": "tf2"
   },
@@ -5577,7 +5574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
