--- a/TensorFlowManual.ipynb
+++ b/TensorFlowManual.ipynb
@@ -128,6 +128,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 基本数据类型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sparse \n",
+    "- SparseTensor vs SparseTensorValue\n",
+    "\n",
+    "sess.run(xx_sp) 的结果就是一个 `SparseTensorValue`\n",
+    "\n",
+    "- SparseTensorValue to SparseTensor\n",
+    "\n",
+    "`tf.sparse.SparseTensor(i['wideFeatures'].indices,i['wideFeatures'].values,i['wideFeatures'].dense_shape)`\n",
+    "\n",
+    "关于 `tf.spase.slice` 本日志里也有记录，直接搜索 | [官方API解释](https://tensorflow.google.cn/api_docs/python/tf/sparse/slice)\n",
+    "\n",
+    "```\n",
+    "tf.sparse.slice(\n",
+    "    sp_input, start, size, name=None\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# DataSet API\n",
     "参考 [知乎这篇文章的介绍](https://zhuanlan.zhihu.com/p/30751039)"
    ]
@@ -2235,6 +2278,7 @@
     "\n",
     "即`tf.slice(tensor,[3,0],[4,tensor.get_shape()[1]-2])`等价于`tensor[3:7,-2]`\n",
     "\n",
+    "\n",
     "### tf.gather\n",
     "```python\n",
     "tf.gather(\n",
@@ -2328,22 +2372,107 @@
     }
    ],
    "source": [
-    "input = np.array([[[1, 1, 1], [2, 2, 2]],\n",
-    "                 [[3, 3, 3], [4, 4, 4]],\n",
-    "                 [[5, 5, 5], [6, 6, 6]]])\n",
-    "input.shape\n",
+    "vec = np.array([[[1, 1, 1], [2, 2, 2]],\n",
+    "                  [[3, 3, 3], [4, 4, 4]],\n",
+    "                  [[5, 5, 5], [6, 6, 6]]])\n",
+    "vec.shape\n",
     "print(\"如下两个是一样的，因为第三维总共就三个元素，取0:3就是所有的都取了\")\n",
-    "input[1:2,0:1]\n",
-    "input[1:2,0:1,0:3]\n",
-    "print(\">>> sess res as follow:\")\n",
+    "vec[1:2,0:1]\n",
+    "vec[1:2,0:1,0:3]\n",
+    "vec(\">>> sess res as follow:\")\n",
     "with tf.Session() as sess:\n",
-    "    sess.run(tf.slice(input, [1, 0, 0], [1, 1, 3])) # 等价于 input[1:2,0:1,0:3]\n",
+    "    sess.run(tf.slice(vec, [1, 0, 0], [1, 1, 3])) # 等价于 input[1:2,0:1,0:3]\n",
     "    # [[[3, 3, 3]]]\n",
     "\n",
-    "    sess.run(tf.gather(input, [0, 2]))\n",
+    "    sess.run(tf.gatherb(vec, [0, 2])) # 取 第0个 和 第2个\n",
     "    # \n",
     "    # [[[1, 1, 1], [2, 2, 2]],\n",
     "    #  [[5, 5, 5], [6, 6, 6]]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tf.gather_nd\n",
+    "```\n",
+    "tf.gather_nd(\n",
+    "    params, indices, batch_dims=0, name=None\n",
+    ")\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-29T12:30:36.638109Z",
+     "start_time": "2020-10-29T12:30:36.532815Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8fccc243d794>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m                   \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                   [[5, 5, 5], [6, 6, 6]]])\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgather_nd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "vec = np.array([[[1, 1, 1], [2, 2, 2]],\n",
+    "                  [[3, 3, 3], [4, 4, 4]],\n",
+    "                  [[5, 5, 5], [6, 6, 6]]])\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.gather_nd(vec,[[0,0]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tf.sparse.slice\n",
+    "类似`tf.slice`\n",
+    "``` \n",
+    "tf.sparse.slice(\n",
+    "    sp_input, start, size, name=None\n",
+    ")\n",
+    "```\n",
+    "- `start` 表示从这个`sp_input`的shape对应维度的索引几开始取\n",
+    "- `size`  表示从`start`那个索引开始取多少个元素\n",
+    "- 例如 `start=[3,1]` 表示`shape[0]`从`索引3`开始取，`shap[1]`从`索引1`开始取\n",
+    "  - `start[i]`这个元素就表示`shape[i]`这一维从`start[i]`这个元素开始取\n",
+    "  - `size[j]`表示`shape[j]`这一维要取`size[j]`个\n",
+    "  - 即start、shape、size里面的元素都是一一对应的，start的第i个元素表示sp_input的第i维该从哪里开始取"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp = tf.sparse.SparseTensor([[0,0],[0,1],[1,0],[1,2],[2,0],[2,2]],[1,2,4,6,7,9],[3,3])\n",
+    "sp_s = tf.sparse.slice(sp,[0,1],[2,2])\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.sparse.to_dense(sp,default_value=-1))\n",
+    "    sess.run(tf.sparse.to_dense(sp_s,default_value=-1))\n",
+    "\n",
+    "# \n",
+    "# array([[ 1,  2, -1],\n",
+    "#        [ 4, -1,  6],\n",
+    "#        [ 7, -1,  9]], dtype=int32)\n",
+    "# tf.sparse.slice(sp,[0,1],[2,2]) 取的结果如下\n",
+    "# array([[ 2, -1],\n",
+    "#        [-1,  6]], dtype=int32)\n",
+    "# tf.sparse.slice(sp,[1,1],[2,2]) 取的结果如下\n",
+    "# array([[-1,  6],\n",
+    "#        [-1,  9]], dtype=int32)"
    ]
   },
   {
@@ -5484,21 +5613,21 @@
    "id": ""
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python2.7(tf1.12)",
    "language": "python",
-   "name": "python3"
+   "name": "tf1.12"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   },
   "toc": {
    "base_numbering": 1,
@@ -5513,7 +5642,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "255.994px"
+    "width": "306.969px"
    },
    "toc_section_display": true,
    "toc_window_display": true
