--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -43,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 历史遗留Calculator实现，完成度未知"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 212,
    "metadata": {
@@ -216,11 +223,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Estimator流程实现Calculator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DNN来拟合加法？"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LSTM API 测试"
+   ]
   },
   {
    "cell_type": "code",
@@ -878,7 +920,7 @@
  "metadata": {
   "celltoolbar": "Initialization Cell",
   "kernelspec": {
-   "display_name": "Python3.6(tf2)",
+   "display_name": "Python3.7(tf2)",
    "language": "python",
    "name": "tf2"
   },
@@ -892,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
@@ -905,7 +947,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
